--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "dayjs": "^1.10.7",
+    "swiper": "^7.4.1",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
